--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div id="showcase-3" class="proj-showcase">
                     <div id="set-solver-pic" class="left-side-showcase">
                     <a href="https://github.com/hsprabhakar/Set-Solver" target="_blank">
-                        <img src="img/setGIF.gif">
+                        <img src="img/SetGIF.gif">
                     </a>
                     </div>
 
